# haikus

./: .env  README.md  dune-project  haikus.opam  syllables.txt
lib/: dictionary.ml  dictionary.mli  dune  groupme.ml  groupme.mli  rest.ml
test/: dune
